<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".page3"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="30sp"
            android:fontFamily="sans-serif"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:paddingLeft="50sp"
            android:paddingRight="50sp"
            android:paddingBottom="20dp"/>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/editTextTextPersonName3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:hint="@string/add_title"
            android:layout_marginLeft="50sp"
            android:layout_marginRight="50sp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/details"
            android:textSize="30sp"
            android:paddingTop="30sp"
            android:paddingLeft="50sp"
            android:paddingRight="50sp"
            android:paddingBottom="20dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            />
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/add_details"
            android:id="@+id/editTextTextPersonName4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:minHeight="48dp"
            android:inputType="text|textMultiLine"
            android:gravity="top"
            android:layout_marginLeft="50sp"
            android:layout_marginRight="50sp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_task"
            android:layout_marginTop="30sp"
            android:layout_marginLeft="50sp"
            android:layout_marginRight="50sp"
            android:padding="15sp"
            />
    </LinearLayout>
</FrameLayout>